cabal-version:      3.12
name:               AU
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alex Gryzlov
maintainer:         aliaksandr.hryzlou@imdea.org
build-type:         Simple
tested-with:        GHC == 9.10.1
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable AU
    import:           warnings
    main-is:          Main.hs
    other-modules: AU
    build-depends:    base ^>=4.20.0.0
                    , HUnit
    hs-source-dirs:   app
    default-language: Haskell2010
